--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -6,4 +6,18 @@
 <body>
 <h1>{{ post.title }}</h1>
 <p>{{ post.body }}</p>
+<hr />
+	<form action="" method="post">
+		{% csrf_token %}
+		{{ form.as_p }}
+		<input type="submit" value="Submit" />
+	</form>
+<hr/>
+<ul>
+	{% for comment in comments %}
+	<li>{{comment.body}} <b>{{comment.name}}</b></li>
+	{% endfor %}
+</ul>
+
+</body>
 </html>
