--- a/blog/templates/detail.html
+++ b/blog/templates/detail.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>{{ post.title }}</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block content %}
 <h1>{{ post.title }}</h1>
 <p>{{ post.body }}</p>
 <hr />
@@ -18,6 +14,4 @@
 	<li>{{comment.body}} <b>{{comment.name}}</b></li>
 	{% endfor %}
 </ul>
-
-</body>
-</html>
+{% endblock %}
