--- a/blog/templates/home.html
+++ b/blog/templates/home.html
@@ -1,12 +1,6 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Hey</title>
-	<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
-</head>
-<body>
-<h1 class="main-title">Hey!</h1>
+{% extends 'base.html' %}
+{% block content %}
+{{ block.super }}
 <h3 class="sub-title">Blog posts:</h3>
 <ul class="post-container">
 	{% for post in posts %}
@@ -14,5 +8,4 @@
 	{% endfor %}
 </ul>
 Toplam: {{ post_count }}
-</body>
-</html>
+{% endblock %}
